Mise a jour mai 1

--- a/chassetresor/src/main/resources/application.properties
+++ b/chassetresor/src/main/resources/application.properties
@@ -6,7 +6,7 @@ error.message=Le nom et la description sont obligatoires
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/chasse_tresor?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=${API_DB_USERNAME}
+spring.datasource.password=${API_DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
